modify the slider alignment issue

--- a/wp-content/themes/tavisha/style.css
+++ b/wp-content/themes/tavisha/style.css
@@ -766,6 +766,7 @@ margin-left:20px;
 
 .big-slider-image img {
   opacity: 0.8;
+  width:100%;
 }
 .big-slider-image img:hover {
   opacity: 1;
